# snydrone

./: .gitignore  README.md
ros2_ws/src/snydrone_brain/: package.xml  setup.cfg  setup.py
ros2_ws/src/snydrone_brain/snydrone_brain/: llm_planner_node.py  shot_executor_node.py  shot_planner_node.py
ros2_ws/src/snydrone_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/snydrone_bringup/launch/: snydrone_core.launch.py
ros2_ws/src/snydrone_bringup/snydrone_bringup/: __init__.py
ros2_ws/src/snydrone_px4/: package.xml  setup.cfg  setup.py
ros2_ws/src/snydrone_px4/snydrone_px4/: px4_offboard_adapter_node.py
ros2_ws/src/snydrone_shots/: package.xml  setup.cfg  setup.py
ros2_ws/src/snydrone_shots/snydrone_shots/: orbit_shot_node.py  path_trail_node.py  target_pose_node.py
ros2_ws/src/snydrone_topic_tools/: package.xml  setup.cfg  setup.py
ros2_ws/src/snydrone_topic_tools/snydrone_topic_tools/: image_relay_node.py
ros2_ws/src/snydrone_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/snydrone_vision/snydrone_vision/: tracker_node.py
snydrone_sim/: run_isaac.py
src/dataset_logger/: dataset_logger_node.py  package.xml  setup.py
src/dataset_logger/config/: logger_params.yaml
src/dataset_logger/launch/: dataset_logger.launch.py
src/dataset_logger/scripts/: bag_to_json.py  bag_to_mp4.py  bag_to_parquet.py
src/llm_agent/: package.xml  setup.cfg  setup.py
src/llm_agent/config/: prompt_params.yaml
src/llm_agent/launch/: llm_agent.launch.py
src/llm_agent/llm_agent/: llm_agent_node.py
src/shot_planner/: package.xml  setup.cfg  setup.py
src/shot_planner/config/: shot_planner.yaml
src/shot_planner/launch/: shot_planner.launch.py
src/shot_planner/resource/shot_planner/: shot_planner_node.py
src/sim_bridge/: __init__.py  package.xml  setup.py
src/sim_bridge/config/: sim_params.yaml
src/sim_bridge/config/scripts/: start_px4_sitl.sh
src/sim_bridge/launch/: simulation.launch.py
src/sim_bridge/scripts/: orbit_demo.py  start_isaac_pegasus.sh  start_px4_sitl.sh
src/snydrone_camera/: camera_stub_node.py  package.xml  setup.cfg  setup.py
src/snydrone_camera/config/: camera_stub.yaml
src/snydrone_camera/launch/: camera_stub.launch.py
src/snydrone_msgs/: CMakeLists.txt  package.xml
src/snydrone_msgs/msg/: CinematicShot.msg  TargetState.msg
src/traj_follower/: package.xml  setup.cfg  setup.py  traj_follower_node.py
src/traj_follower/launch/: traj_follower.launch.py  traj_follower.yaml
src/vision_tracker/: package.xml  setup.cfg  setup.py  vision_tracker_node.py
src/vision_tracker/launch/: vision_tracker.launch.py
